Add all endpoints
